Update the MainForm UI to display important information

--- a/StationPlus/StationPlus.vbproj
+++ b/StationPlus/StationPlus.vbproj
@@ -145,6 +145,21 @@
   <ItemGroup>
     <None Include="Resources\STATION+ login image.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\avatar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main bg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\storage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\briefing.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\main bg v2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
