--- a/StationPlus/StationPlus.vbproj
+++ b/StationPlus/StationPlus.vbproj
@@ -78,6 +78,12 @@
     <Compile Include="AboutForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="administrator.Designer.vb">
+      <DependentUpon>administrator.vb</DependentUpon>
+    </Compile>
+    <Compile Include="administrator.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CustomSQLForm.Designer.vb">
       <DependentUpon>CustomSQLForm.vb</DependentUpon>
     </Compile>
@@ -119,6 +125,9 @@
   <ItemGroup>
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="administrator.resx">
+      <DependentUpon>administrator.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CustomSQLForm.resx">
       <DependentUpon>CustomSQLForm.vb</DependentUpon>
