--- a/StationPlus/StationPlus.vbproj
+++ b/StationPlus/StationPlus.vbproj
@@ -133,9 +133,18 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RewardsForm.Designer.vb">
+      <DependentUpon>RewardsForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="RewardsForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="StationPlusDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <DependentUpon>StationPlusDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="StationPlusDataSet.vb">
       <DependentUpon>StationPlusDataSet.xsd</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -167,6 +176,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RewardsForm.resx">
+      <DependentUpon>RewardsForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
