--- a/StationPlus/My Project/Settings.settings
+++ b/StationPlus/My Project/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="StationPlusConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=(local)\SQLExpress;Initial Catalog=StationPlus;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=(local)\SQLExpress;Initial Catalog=StationPlus;Integrated Security=True;MultipleActiveResultSets=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=(local)\SQLExpress;Initial Catalog=StationPlus;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=(local)\SQLExpress;Initial Catalog=StationPlus;Integrated Security=True;MultipleActiveResultSets=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
